<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        tools:context=".fragments.HomeFragment">

        <Button
            android:id="@+id/buttonPopular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:backgroundTint="#D76A03"
            android:fontFamily="cursive"
            android:paddingLeft="5sp"
            android:paddingTop="5sp"
            android:paddingRight="5sp"
            android:paddingBottom="5sp"
            android:text="@string/popular"
            android:textColor="#000000"
            android:textSize="38sp"
            app:icon="@android:drawable/ic_media_play"
            app:iconTint="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintVertical_bias="0.25"
            app:showAsAction="always" />

        <Button
            android:id="@+id/buttonGenres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:backgroundTint="#D76A03"
            android:fontFamily="cursive"
            android:paddingLeft="5sp"
            android:paddingTop="5sp"
            android:paddingRight="5sp"
            android:paddingBottom="5sp"
            android:text="@string/genres"
            android:textColor="#000000"
            android:textSize="38sp"
            app:icon="@android:drawable/ic_media_ff"
            app:iconTint="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonPopular"
            app:layout_constraintVertical_bias="0.100000024" />

        <Button
            android:id="@+id/buttonWatchList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:backgroundTint="#D76A03"
            android:fontFamily="cursive"
            android:paddingLeft="5sp"
            android:paddingTop="5sp"
            android:paddingRight="5sp"
            android:paddingBottom="5sp"
            android:text="@string/watchlist"
            android:textColor="#000000"
            android:textSize="38sp"
            app:icon="@android:drawable/ic_media_pause"
            app:iconTint="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonGenres"
            app:layout_constraintVertical_bias="0.100000024" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/my_movies"
            android:textColor="#D76A03"
            android:textSize="70sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.100000024" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>